Arreglos personales de la segunda version :)

--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
           <figcaption class="contenido">
             <h2>Subir Imagen?</h2>
             <p>
-              El siguiente codigo fue realizado con php para poder pasar
-              imagenes desde el dispositivo movil, soporta cualquier extencion
-              de las imagenes como jpg,png,jpeg... (Solo soporta 20 img) por
-              defecto se guarda en la siguiente dirección
-              `D:/Oliver/RECUERDOS/RecPhp/`.
+              El siguiente codigo fue realizado con los conocimientos basicos de html y css
             </p>
             <div class="caja-enlace">
               <a href="../ShareOliver/BetaFusion/" class="enlace">Click</a>
@@ -149,9 +145,9 @@
             <div class="card-f">
               <h3 class="titulo-cf">Contactos mas buscados</h3>
               <ul class="lista">
-                <li>Dennis Saravia 78858558</li>
-                <li>Oliver Quino 73066854</li>
-                <li>Obito Uchija 161430</li>
+                <li>Dennis Saravia </li>
+                <li>Oliver Quino </li>
+                <li>Obito Uchija </li>
               </ul>
               <input
                 class="busqueda"
@@ -184,7 +180,7 @@
           <summary class="footer-link">
             <i class="fa-solid fa-phone"></i> Celular
           </summary>
-          <p class="footer-p">78858558</p>
+          <p class="footer-p"></p>
         </details>
       </div>
     </footer>
